--- a/JS Back End - Node.js - 2023/Crypto Trade/src/views/search.hbs
+++ b/JS Back End - Node.js - 2023/Crypto Trade/src/views/search.hbs
@@ -2,37 +2,41 @@
     <section class="crypto-search">
         <h1>Search</h1>
 
-        <form class="search-form" action="#" method="">
-            <input type="text" class="search-coin" name="" placeholder="Search here...">
-            <select id="payment" name="">
-                <option value="crypto-wallet">Crypto Wallet</option>
-                <option value="credit-card">Credit Card</option>
-                <option value="debit-card">Debit Card</option>
-                <option value="paypal">PayPal</option>
+        <form class="search-form" method="POST">
+            <input type="text" class="search-coin" name="name" placeholder="Search here...">
+            <select id="payment" name="payment">
+                <option value="Crypto Wallet">Crypto Wallet</option>
+                <option value="Credit Card">Credit Card</option>
+                <option value="Debit Card">Debit Card</option>
+                <option value="PayPal">PayPal</option>
             </select>
             <button type="submit" class="btn-search">Search</button>
         </form>
 
         <div class="search-result">
             <div class="search-list">
+                {{#each cryptoResult}}
                 <div class="coin">
                     <div class="coin-img">
-                        <img src="./static/images/ethereum.png">
+                        <img src="{{image}}">
                     </div>
                     <div class="coin-info">
-                        <h1>Ethereum</h1>
-                        <p><span>Price: </span>$2,338.55</p>
-                        <p><span>Payment: </span>debit-card</p>
+                        <h1>{{name}}</h1>
+                        <p><span>Price: </span>${{price}}</p>
+                        <p><span>Payment: </span>{{payment}}</p>
                     </div>
 
-                    <a href="#" class="btn-details">Details</a>
+                    <a href="/crypto/details/{{_id}}" class="btn-details">Details</a>
                 </div>
+                {{else}}
+                <div class="no-match">
+                    <p>No match was found!</p>
+                </div>
+                {{/each}}
             </div>
 
         </div>
 
-        <!-- <div class="no-match">
-                <p>No match was found!</p>
-            </div> -->
+
     </section>
 </main>
