--- a/JS Back End - Node.js - 2023/Auction House/src/views/auction/details.hbs
+++ b/JS Back End - Node.js - 2023/Auction House/src/views/auction/details.hbs
@@ -35,15 +35,36 @@
                         </div>
 
                         <!-- If current user can place a bid -->
+                        {{#unless isOwner}}
+                        {{#if isHighestBidder}}
+                        <div>
+                            You are currently the <strong>highest bidder</strong> for this auction
+                        </div>
+                        {{else}}
+                        {{#if isAuthenticated}}
                         <form class="vertical" method="POST">
                             <label><span>Bid amount</span><input type="number" name="bid"></label>
                             <input class="action" type="submit" value="Place bid">
                         </form>
+                        {{/if}}
+                        {{/if}}
 
-                        <!-- If current user is the bidder -->
+                        {{/unless}}
+
+                        {{#if isOwner}}
+                        {{#unless hasBids}}
                         <div>
-                            You are currently the <strong>highest bidder</strong> for this auction
+                            No bids
                         </div>
+                        {{else}}
+                        <!-- TODO RENDER HIGHEST BIDDER NAME-->
+                        <div>
+                            Bid by {{foundAuction.bidder.firstname}} {{foundAuction.bidder.lastname}} 
+                        </div>
+                        {{/unless}}
+                        {{/if}}
+                        <!-- If current user is the bidder -->
+
 
                     </div>
 
