--- a/JS Back End - Node.js - 2023/Auction House/src/views/home.hbs
+++ b/JS Back End - Node.js - 2023/Auction House/src/views/home.hbs
@@ -26,9 +26,9 @@
 
                     <div class="align-center">
 
-                        <a class="action" href="#">Browse Listings</a>
+                        <a class="action" href="/auction/catalog">Browse Listings</a>
                         {{#if isAuthenticated}}
-                        <a class="action" href="#">Publish Auction</a>
+                        <a class="action" href="/auction/create">Publish Auction</a>
                         {{/if}}
                     </div>
                 </div>
