--- a/Angular/Udemy - Playground/directives-practice/src/app/app.component.html
+++ b/Angular/Udemy - Playground/directives-practice/src/app/app.component.html
@@ -3,6 +3,6 @@
 <ul>
   <ng-container *ngFor="let click of clickArr">
     <li *ngIf="click < 5">You clicked on the button {{click}} times</li>
-    <li *ngIf="click >= 5" [ngStyle]="{'background-color': 'blue'}">You clicked on the button {{click}} times</li>
+    <li *ngIf="click >= 5" [ngStyle]="{'background-color': 'blue'}" [ngClass]="{'over-five': true}">You clicked on the button {{click}} times</li>
   </ng-container>
 </ul>
