--- a/Angular/Udemy - Playground/directives-practice/src/app/app.component.html
+++ b/Angular/Udemy - Playground/directives-practice/src/app/app.component.html
@@ -1,8 +1,13 @@
 <button (click)="passwordToggle()">Display Details</button>
 <p [ngStyle]="{display: hidePassword}">Secret password = tuna</p>
 <ul>
-  <ng-container *ngFor="let click of clickArr">
+  <!-- <ng-container *ngFor="let click of clickArr">
     <li *ngIf="click < 5">You clicked on the button {{click}} times</li>
     <li *ngIf="click >= 5" [ngStyle]="{'background-color': 'blue'}" [ngClass]="{'over-five': true}">You clicked on the button {{click}} times</li>
-  </ng-container>
+  </ng-container> -->
+  <li *ngFor="let click of clickArr" [ngClass]="{'over-five': click >= 5}"
+    [ngStyle]="{backgroundColor: click >= 5 ? 'blue' : 'white'}">
+    You clicked on the button {{click}} times
+  </li>
+
 </ul>
