--- a/Angular/Udemy - Playground/recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Angular/Udemy - Playground/recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="{{currentRecipe.imagePath}}" alt="" class="img-responsive">
+    <img src="{{currentRecipe.imagePath}}" alt="" class="img-responsive" style="max-height: 200px">
   </div>
 </div>
 <div class="row">
