--- a/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/main-container/main-container.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <main>
-        <app-home></app-home>
+        <!-- <app-home></app-home> -->
         <!-- <app-themes>
 
         </app-themes> -->
+        <router-outlet></router-outlet>
     </main>
     <!-- aside component  -->
     <!-- <app-aside>
