--- a/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
@@ -17,14 +17,15 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a routerLink="/">Home</a>
             </li>
             <li>
-                <a href="#">Themes</a>
+                <a routerLink="/themes">Themes</a>
             </li>
             <li>
-                <a href="#">New Theme</a>
+                <a routerLink="/themes">New Theme</a>
             </li>
         </ul>
     </nav>
+    
 </header>
