--- a/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
@@ -23,7 +23,7 @@
                 <a routerLink="/themes">Themes</a>
             </li>
             <li>
-                <a routerLink="/themes">New Theme</a>
+                <a routerLink="/themes/add">New Theme</a>
             </li>
         </ul>
     </nav>
