--- a/Angular/SoftUni-Forum/src/app/core/main-container/home/home.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/main-container/home/home.component.html
@@ -6,13 +6,13 @@
         <div class="logged">
             <ul>
                 <li>
-                    <a href="#">
+                    <a routerLink="/user/login">
                         <i class="fas fa-sign-in-alt"></i>
                         Login
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a routerLink="/user/register">
                         <i class="fas fa-user-plus"></i>
                         Register
                     </a>
