--- a/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li>
-                <a routerLink="/">Home</a>
+                <a routerLink="/home">Home</a>
             </li>
             <li>
                 <a routerLink="/themes">Themes</a>
