--- a/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
+++ b/Angular/SoftUni-Forum/src/app/core/navigation/navigation.component.html
@@ -12,6 +12,15 @@
                     <a routerLink="/user/register">Register</a>
                 </li>
             </ul>
+
+            <ul *ngIf="isLogged">
+                <li>
+                    <a routerLink="/user/profile">Welcome, {{firstName}}</a>
+                </li>
+                <li>
+                    <a (click)="logout()">Logout</a>
+                </li>
+            </ul>
         </div>
     </div>
     <nav>
