--- a/Angular/SoftUni-Forum/src/app/themes/add-theme/add-theme.component.html
+++ b/Angular/SoftUni-Forum/src/app/themes/add-theme/add-theme.component.html
@@ -25,7 +25,7 @@
                 </p>
             </div>
             <div class="new-theme-buttons">
-                <button class="cancel">Cancel</button>
+                <button class="cancel" (click)="onCancel()">Cancel</button>
                 <button class="public">Post</button>
             </div>
 
