--- a/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.css
+++ b/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.css
@@ -41,7 +41,7 @@ i {
 }
 
 a {
-    color:  #007bff;
+    color: #007bff;
 }
 
 .container {
@@ -78,5 +78,15 @@ p.error {
 }
 
 input.error {
-    border-left-color:#a8413f;
+    border-left-color: #a8413f;
+}
+
+input.ng-valid {
+    border-left: 5px solid #42A948;
+    /* green */
+}
+
+input.ng-invalid.ng-touched {
+    border-left: 5px solid #A94442;
+    /* red */
 }
