--- a/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.html
+++ b/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.html
@@ -1,62 +1,83 @@
 <div class="container">
-
     <form #f="ngForm" (ngSubmit)="onSubmit()">
-      
-      <fieldset>
-        <h1>Registration Form</h1>
-  
-        <p class="field field-icon">
-          <label for="username"><span><i class="fas fa-user"></i></span></label>
-          <input type="text" name="username" id="username" class="error" placeholder="Mark Ulrich" ngModel>
-        </p>
-  
-        <!-- if error -->
-        <!-- <p class="error">
-          Message for Error
-        </p> -->
-        <!-- end if error -->
-        
-        <p class="field field-icon">
-          <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-          <input type="text" name="email" id="email" placeholder="marк@gmial.com" ngModel>
-        </p>
-  
-        <p class="field field-icon">
-          <label for="code"><span><i class="fas fa-phone"></i></span></label>
-          <select name="code" id="code" class="code" ngModel [(ngModel)]="defaultCode">
-            <option *ngFor="let phone of phoneCodes" [value]="phone">{{phone}}</option>
-          </select>
-          <input type="text" name="tel" id="tel" placeholder="888 888" ngModel>
-        </p>
-  
-        <p class="field field-icon">
-          <label for="building"><span><i class="fas fa-building"></i></span></label>
-          <select name="building" id="building" class="building" ngModel [(ngModel)]="defaultJob">
-            <option *ngFor="let job of jobs"
-            [value]="job"
-            >{{job}}</option>
-          </select>
-        </p>
-  
-        <p class="field field-icon">
-          <label for="password"><span><i class="fas fa-lock"></i></span></label>
-          <input type="password" name="password" id="password" placeholder="******" ngModel>
-        </p>
-  
-        <p class="field field-icon">
-          <label for="re-password"><span><i class="fas fa-lock"></i></span></label>
-          <input type="re-password" name="re-password" id="re-password" placeholder="******" ngModel>
-        </p>
-  
-        <p>
-          <button>Create Account</button>
-        </p>
-        
-        <p class="text-center">
-          Have an account?
-          <a href="">Log In</a>
-        </p>
-        
-      </fieldset>
+        <fieldset>
+            <h1>Registration Form</h1>
+
+            <p class="field field-icon">
+                <label for="username"><span><i class="fas fa-user"></i></span></label>
+                <input type="text" name="username" id="username" placeholder="Mark Ulrich" ngModel
+                    pattern="[A-Z][a-z]* [A-Z][a-z]*" required #username="ngModel" />
+            </p>
+
+            <!-- Error message if username is invalid-->
+            <p class="error" *ngIf="!username.valid && username.touched">
+                Please enter valid name!
+            </p>
+
+            <p class="field field-icon">
+                <label for="email"><span><i class="fas fa-envelope"></i></span></label>
+                <input type="text" name="email" id="email" placeholder="marк@gmial.com" ngModel email required
+                    #email="ngModel" />
+            </p>
+
+            <!-- Error message if email is invalid-->
+            <p class="error" *ngIf="!email.valid && email.touched">
+                Please enter valid email!
+            </p>
+
+            <p class="field field-icon">
+                <label for="code"><span><i class="fas fa-phone"></i></span></label>
+                <select name="code" id="code" class="code" ngModel [(ngModel)]="defaultCode">
+                    <option *ngFor="let phone of phoneCodes" [value]="phone">
+                        {{ phone }}
+                    </option>
+                </select>
+                <input type="text" name="tel" id="tel" placeholder="888 888" ngModel pattern="^\d{9}$" required
+                    #tel="ngModel" />
+            </p>
+
+            <!-- Error message if tel number is invalid-->
+            <p class="error" *ngIf="!tel.valid && tel.touched">
+                Please enter valid telephone number!
+            </p>
+
+            <p class="field field-icon">
+                <label for="building"><span><i class="fas fa-building"></i></span></label>
+                <select name="building" id="building" class="building" ngModel [(ngModel)]="defaultJob">
+                    <option *ngFor="let job of jobs" [value]="job">{{ job }}</option>
+                </select>
+            </p>
+
+            <p class="field field-icon">
+                <label for="password"><span><i class="fas fa-lock"></i></span></label>
+                <input type="password" name="password" id="password" placeholder="******" ngModel required
+                    pattern="[\w\d]{3,16}" #password="ngModel" />
+            </p>
+
+            <!-- Error message if password is invalid-->
+            <p class="error" *ngIf="!password.valid && password.touched">
+                Please enter password between 3 and 16 symbols
+            </p>
+
+            <p class="field field-icon">
+                <label for="re-password"><span><i class="fas fa-lock"></i></span></label>
+                <input type="password" name="re-password" id="re-password" placeholder="******" ngModel required
+                    #rePassword="ngModel" />
+            </p>
+
+            <!-- Error message if re-password do not match is invalid-->
+            <p class="error" *ngIf="rePassword.value !== password.value">
+                Passwords do not match!
+            </p>
+
+            <p>
+                <button [disabled]="!f.valid" >Create Account</button>
+            </p>
+
+            <p class="text-center">
+                Have an account?
+                <a href="" >Log In</a>
+            </p>
+        </fieldset>
     </form>
-  </div>
+</div>
