--- a/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.html
+++ b/Angular/Forms-Playground/forms/src/app/register-form/register-form.component.html
@@ -66,7 +66,8 @@
                 <p class="field field-icon">
                     <label for="re-password"><span><i class="fas fa-lock"></i></span></label>
                     <input type="password" name="re-password" id="re-password" placeholder="******" ngModel required
-                        #rePassword="ngModel"/>
+                        #rePassword="ngModel"
+                        />
                 </p>
 
                 <!-- Error message if re-password do not match is invalid -->
@@ -74,6 +75,12 @@
                     Passwords do not match!
                 </p>
             </div>
+            
+            <!-- image url -->
+            <p class="field field-icon">
+                <label for="imageUrl"><span><i class="fa fa-image"></i></span></label>
+                <input type="text" name="imageUrl" id="imageUrl" placeholder="https" [appImage]="imageUrl.value" #imageUrl ngModel/>
+            </p>
 
             <p>
                 <button [disabled]="!f.valid">Create Account</button>
