--- a/Angular/Forms-Playground/forms/src/app/register-form-reactive/register-form-reactive.component.html
+++ b/Angular/Forms-Playground/forms/src/app/register-form-reactive/register-form-reactive.component.html
@@ -7,7 +7,7 @@
 
             <p class="field field-icon">
                 <label for="username"><span><i class="fas fa-user"></i></span></label>
-                <input type="text" name="username" id="username" class="error" placeholder="Mark Ulrich">
+                <input type="text" name="username" id="username" class="error" placeholder="Mark Ulrich" formControlName="name">
             </p>
 
             <!-- if error -->
@@ -18,32 +18,32 @@
 
             <p class="field field-icon">
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-                <input type="text" name="email" id="email" placeholder="marк@gmial.com">
+                <input type="text" name="email" id="email" placeholder="marк@gmial.com" formControlName="email">
             </p>
 
             <p class="field field-icon">
                 <label for="tel"><span><i class="fas fa-phone"></i></span></label>
-                <select name="tel" id="tel" class="tel">
+                <select name="tel" id="tel" class="tel" formControlName="code">
                     <option value="1">+359</option>
                 </select>
-                <input type="text" name="tel" id="tel" placeholder="888 888">
+                <input type="text" name="tel" id="tel" placeholder="888 888" formControlName="tel">
             </p>
 
             <p class="field field-icon">
                 <label for="building"><span><i class="fas fa-building"></i></span></label>
-                <select name="building" id="building" class="building">
+                <select name="building" id="building" class="building" formControlName="job">
                     <option value="1">Designer</option>
                 </select>
             </p>
 
             <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="password" name="password" id="password" placeholder="******">
+                <input type="password" name="password" id="password" placeholder="******" formControlName="password">
             </p>
 
             <p class="field field-icon">
                 <label for="re-password"><span><i class="fas fa-lock"></i></span></label>
-                <input type="re-password" name="re-password" id="re-password" placeholder="******">
+                <input type="re-password" name="re-password" id="re-password" placeholder="******" formControlName="rePassword">
             </p>
 
             <p>
