--- a/Angular/SoftUni-Forum/src/app/user/login/login.component.html
+++ b/Angular/SoftUni-Forum/src/app/user/login/login.component.html
@@ -50,7 +50,7 @@
 
             <p class="text-center">
                 Have an account?
-                <a href="#">Register</a>
+                <a routerLink="/user/register">Register</a>
             </p>
 
         </fieldset>
