--- a/Angular/SoftUni-Forum/src/app/user/register/register.component.html
+++ b/Angular/SoftUni-Forum/src/app/user/register/register.component.html
@@ -56,35 +56,45 @@
             </p>
 
             <!-- password -->
-            <p class="field field-icon">
+            <div ngModelGroup="passwordGroup" appConfirmPassword>
+                <p class="field field-icon">
                 <label for="password"><span><i class="fas fa-lock"></i></span></label>
                 <input type="password" name="password" id="password" placeholder="******"
                 #password="ngModel"
                 ngModel
+                required
+                pattern="[a-zA-Z0-9]{5,}"
                 >
-            </p>
-            <!-- <p class="error">
+                </p>
+
+                <ng-container *ngIf="password.touched">
+                <p class="error" *ngIf="password.errors?.['required']">
                 Password is required!
-            </p>
-            <p class="error">
-                Password must be at least 4 characters!
-            </p> -->
+                </p>
+                <p class="error" *ngIf="password.errors?.['pattern']">
+                Password must be at least 5 characters!
+                </p>
+                </ng-container>
 
             <!-- rePassword -->
-            <p class="field field-icon">
+                <p class="field field-icon">
                 <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
                 <input type="password" name="rePassword" id="rePassword" placeholder="******"
                 #rePassword="ngModel"
                 ngModel
+                required
                 >
-            </p>
-            <!-- <p class="error">Repeat Password does not match password!</p> -->
+                </p>
+            <p class="error" *ngIf="form.form.controls['passwordGroup']?.errors?.['passwordMatchError']">Repeat Password does not match password!</p>
+        </div>
 
-            <button>Create Account</button>
+            <button 
+            [disabled]="form.invalid"
+            >Create Account</button>
 
             <p class="text-center">
                 Have an account?
-                <a href="#">Log In</a>
+                <a routerLink="/user/login">Log In</a>
             </p>
 
         </fieldset>
